add fonts, btn & style for list

--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,14 @@
             <div class="wrapper">
                <input type="text" class="input" placeholder="Введите название" id="input-title">
                <button class="btn" id="btn-create">Добавить</button>
-            </div>
-            <ul class="list-todo">
-               <li class="list-todo__item"><span>Название</span></li>
-            </ul>
 
+               <ul class="list-todo">
+                  <li class="list-todo__item">
+                     <p class="list-todo__item-title">Название</p>
+                     <button class="list-todo__btn-deleted"></button>
+                  </li>
+               </ul>
+            </div>
          </section>
       </div>
 
