add deleted btn

--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,10 @@
                <button class="btn" id="btn-create">Добавить</button>
 
                <ul class="list-todo">
-                  <li class="list-todo__item">
+                  <!-- <li class="list-todo__item">
                      <p class="list-todo__item-title">Название</p>
                      <button class="list-todo__btn-deleted"></button>
-                  </li>
+                  </li> -->
                </ul>
             </div>
          </section>
