--- a/src/index.html
+++ b/src/index.html
@@ -18,45 +18,76 @@
             <h1 class="aside__title">ToDo-list</h1>
             <nav class="aside__nav">
                <ul class="aside__list">
-                  <li class="aside__item">Dashboard</li>
-                  <li class="aside__item">Calendar</li>
-                  <li class="aside__item">My tasks</li>
-                  <li class="aside__item">Statistic</li>
-                  <li class="aside__item">Document</li>
+                  <li class="aside__item">
+                     <img class="aside__item-img dashboard" src="<%=require('./images/dashboard_b.png')%>" alt="">
+                     <span>Dashboard</span>
+                  </li>
+                  <li class="aside__item ">
+                     <img class="aside__item-img calendar" src="<%=require('./images/calendar_b.png')%>" alt="">
+                     <span>Календарь</span>
+                  </li>
+                  <li class="aside__item ">
+                     <img class="aside__item-img todo-list" src="<%=require('./images/list_black.png')%>" alt="">
+                     <span>ToDo-list</span>
+                  </li>
+                  <li class="aside__item ">
+                     <img class="aside__item-img statistic" src="<%=require('./images/statistic_b.png')%>" alt="">
+                     <span>Statistic</span>
+                  </li>
+                  <!-- <li class="aside__item">Document</li> -->
                </ul>
             </nav>
-            <div class="aside__wrap">2</div>
-            <div class="aside__wrap">3</div>
-            <div class="aside__wrap">4</div>
+            <!-- <div class="aside__wrap">2</div>
+            <div class="aside__wrap">3</div> -->
+            <div class="aside__settings">
+               <p class="aside__item settings">
+                  <img class="aside__item-img statistic" src="<%=require('./images/settings_b.png')%>" alt="">
+                  <span>Настройки</span>
+               </p>
+            </div>
          </aside>
          <section class="screen-area">
             <header class="header">
-               <h2 class="header__title">Hi, Alexander!</h2>
+               <h2 class="header__title">Привет, Соня!</h2>
             </header>
             <div class="wrapper">
                <input type="text" class="input" placeholder="Введите название" id="input-title">
                <button class="btn" id="btn-create">Добавить</button>
                <div class="no-list-todo">
                   <p class="no-list-todo__text">Нет добавленных задач</p>
-                </div>
+               </div>
                <ul class="list-todo">
-                  
+
                </ul>
             </div>
          </section>
       </div>
+      <template id="todo-template">
+         <li class="list-todo__item">
+            <p class="list-todo__item-title"></p>
+            <div class="list-todo__container-btn">
+               <button class="list-todo__btn-done"></button>
+               <button class="list-todo__btn-edit"></button>
+               <button class="list-todo__btn-deleted"></button>
+            </div>
+         </li>
+      </template>
    </main>
 
-   <template id="todo-template">
-      <li class="list-todo__item">
-         <p class="list-todo__item-title">Название</p>
-         <div class="list-todo__container-btn">
-            <button class="list-todo__btn-done"></button>
-            <button class="list-todo__btn-edit"></button>
-            <button class="list-todo__btn-deleted"></button>
-         </div>
-      </li>
-    </template>
+   <section class="popup-edit">
+      <div class="popup-edit__container">
+         <button class="popup__close">
+            Закрыть
+            <img class="popup__close-img" src="<%=require('./images/popup_close_b.png')%>" alt="">
+         </button>
+         <h2 class="popup-edit__title">Редактировать заголовок</h2>
+         <form class="popup-edit__form" method="post" name="popupEditForm">
+            <input type="text" name="title" value="Жак-Ив Кусто" required placeholder="Название заметки"
+               class="popup__input">
+            <button class="btn popup__submit" type="submit">Сохранить</button>
+         </form>
+      </div>
+   </section>
 
 </body>
 
