--- a/src/index.html
+++ b/src/index.html
@@ -100,42 +100,42 @@
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">Ощущается как:</p>
-                              <p class="weather__info-item-text">6&deg;</p>
+                              <p class="weather__info-item-text" id="fillsLike">6&deg;</p>
                            </div>
                         </div>
                         <div class="weather__info-item">
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">Скорость ветра:</p>
-                              <p class="weather__info-item-text">6 км/ч</p>
+                              <p class="weather__info-item-text" id="windSpeed">6 км/ч</p>
                            </div>
                         </div>
                         <div class="weather__info-item">
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">Влажность:</p>
-                              <p class="weather__info-item-text">40%</p>
+                              <p class="weather__info-item-text" id="humidity">40%</p>
                            </div>
                         </div>
                         <div class="weather__info-item">
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">УФ-индекс:</p>
-                              <p class="weather__info-item-text">0</p>
+                              <p class="weather__info-item-text" id="uv">0</p>
                            </div>
                         </div>
                         <div class="weather__info-item">
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">Восход солнца:</p>
-                              <p class="weather__info-item-text">07:02</p>
+                              <p class="weather__info-item-text" id="sunrise">07:02</p>
                            </div>
                         </div>
                         <div class="weather__info-item">
                            <div class="weather__info-item-icon"></div>
                            <div class="weather__info-item-container">
                               <p class="weather__info-item-title">Закат солнца:</p>
-                              <p class="weather__info-item-text">18:18</p>
+                              <p class="weather__info-item-text" id="sunset">18:18</p>
                            </div>
                         </div>
                      </div>
@@ -160,21 +160,21 @@
                      <h4 class="weather__weekly-title">Прогноз на 5 дней</h4>
                      <div class="weather__weekly-items">
                         <div class="weather__weekly-item">
-                           <p class="weather__weekly-item-day">Вт</p>
+                           <p class="weather__weekly-item-day" id="dayWeekFirst">Вт</p>
                            <div class="weather__weekly-item-img"></div>
                            <p class="weather__weekly-item-degree">12&deg;</p>
                         </div>
                         <div class="weather__weekly-item">
-                           <p class="weather__weekly-item-day">Ср</p>
+                           <p class="weather__weekly-item-day" id="dayWeekSecond">Ср</p>
                            <div class="weather__weekly-item-img"></div>
                            <p class="weather__weekly-item-degree">11&deg;</p>
                         </div>
                         <div class="weather__weekly-item">
-                           <p class="weather__weekly-item-day">Чт</p>
+                           <p class="weather__weekly-item-day" id="dayWeekThird">Чт</p>
                            <div class="weather__weekly-item-img"></div>
                            <p class="weather__weekly-item-degree">10&deg;</p>
                         </div>
-                        <div class="weather__weekly-item">
+                        <!-- <div class="weather__weekly-item">
                            <p class="weather__weekly-item-day">Пт</p>
                            <div class="weather__weekly-item-img"></div>
                            <p class="weather__weekly-item-degree">12&deg;</p>
@@ -183,7 +183,7 @@
                            <p class="weather__weekly-item-day">Сб</p>
                            <div class="weather__weekly-item-img"></div>
                            <p class="weather__weekly-item-degree">13&deg;</p>
-                        </div>
+                        </div> -->
                      </div>
                   </div>
                </div>
@@ -206,6 +206,13 @@
             </div>
          </li>
       </template>
+      <!-- <template id="weather-template">
+      <div class="weather__weekly-item">
+         <p class="weather__weekly-item-day">Вт</p>
+         <div class="weather__weekly-item-img"></div>
+         <p class="weather__weekly-item-degree">12&deg;</p>
+      </div>
+   </template> -->
    </main>
 
    <section class="popup popup-edit">
